# ChangeLog for media-sound/rhythmbox
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/rhythmbox/ChangeLog,v 1.272 2015/06/26 09:23:12 ago Exp $

  26 Jun 2015; Agostino Sarubbo <ago@gentoo.org> rhythmbox-3.2.1.ebuild:
  Stable for x86, wrt bug #551814

  21 Jun 2015; Mikle Kolyada <zlogene@gentoo.org> rhythmbox-3.2.1.ebuild:
  amd64 stable wrt bug #551814

*rhythmbox-3.2.1 (01 May 2015)

  01 May 2015; Gilles Dartiguelongue <eva@gentoo.org> +rhythmbox-3.2.1.ebuild:
  Version bump, bug #545886.

  08 Apr 2015; Michał Górny <mgorny@gentoo.org> rhythmbox-3.0.3.ebuild:
  Drop old Python implementations

  19 Dec 2014; Pacho Ramos <pacho@gentoo.org> rhythmbox-3.1.ebuild:
  amd64 stable, bug 529964

  18 Dec 2014; Pacho Ramos <pacho@gentoo.org> rhythmbox-3.1.ebuild:
  x86 stable, bug 529964

  01 Dec 2014; Michał Górny <mgorny@gentoo.org> rhythmbox-3.1.ebuild:
  Use python-r1 to avoid issues with python-single-r1 when depending on libpeas.
  Enforce proper USE dependency on libpeas.

  24 Nov 2014; Pacho Ramos <pacho@gentoo.org> rhythmbox-3.1.ebuild:
  python-3.3 is the default again

  24 Nov 2014; Pacho Ramos <pacho@gentoo.org> rhythmbox-3.1.ebuild:
  Support python 3.4

  03 Oct 2014; Pacho Ramos <pacho@gentoo.org> rhythmbox-3.1.ebuild:
  Tests failing for years without upstream caring at all, upstream bug #688745

*rhythmbox-3.1 (03 Oct 2014)

  03 Oct 2014; Pacho Ramos <pacho@gentoo.org> +rhythmbox-3.1.ebuild,
  -files/rhythmbox-0.12-python-initialization.patch,
  -files/rhythmbox-0.12.8-libnotify-0.7.patch,
  -files/rhythmbox-0.12.8-namespace-conflict.patch, -rhythmbox-3.0.2.ebuild:
  Version bump, drop old

  24 Jul 2014; Samuli Suominen <ssuominen@gentoo.org> rhythmbox-3.0.2.ebuild,
  rhythmbox-3.0.3.ebuild:
  Use virtual/libgudev with := instead of virtual/udev.

  23 Jul 2014; Agostino Sarubbo <ago@gentoo.org> rhythmbox-3.0.3.ebuild:
  Stable for x86, wrt bug #512012
